# access-manager

./: .gitignore  ARCHITECTURE.md  README.md  build.gradle.kts  generate_report  generate_report.cpp  gradle.properties  run_100_cycles.sh  settings.gradle.kts  test_checksum  test_checksum.cpp  test_checksum.kt  test_handshake  test_handshake.cpp  test_packet  test_packet.cpp  ui.xml  ui2.xml
app/: build.gradle.kts
app/schemas/dev.kartik.accessmanager.database.AccessManagerDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/backend/: AddressTranslator.cpp  AddressTranslator.h  LwipBackend.cpp  LwipBackend.h  NetworkBackend.h  RelayThread.cpp  RelayThread.h  SessionManager.cpp  SessionManager.h
app/src/main/cpp/bridge/: bridge.cpp
app/src/main/cpp/common/: Error.h  Logger.h  Memory.h
app/src/main/cpp/port/: sys_arch.cpp
app/src/main/cpp/port/include/: lwipopts.h
app/src/main/cpp/port/include/arch/: cc.h  sys_arch.h
app/src/main/java/dev/kartik/accessmanager/: AccessManagerApplication.kt  MainActivity.kt
app/src/main/java/dev/kartik/accessmanager/data/datasource/: PackageManagerDataSource.kt
app/src/main/java/dev/kartik/accessmanager/data/mapper/: PolicyMapper.kt
app/src/main/java/dev/kartik/accessmanager/data/repository/: AppRepositoryImpl.kt  PolicyRepositoryImpl.kt
app/src/main/java/dev/kartik/accessmanager/database/: AccessManagerDatabase.kt
app/src/main/java/dev/kartik/accessmanager/database/dao/: PolicyDao.kt
app/src/main/java/dev/kartik/accessmanager/database/entity/: PolicyEntity.kt
app/src/main/java/dev/kartik/accessmanager/di/: AppModule.kt  ApplicationScope.kt  DatabaseModule.kt
app/src/main/java/dev/kartik/accessmanager/domain/model/: AccessPolicy.kt  AccessState.kt  InstalledApp.kt
app/src/main/java/dev/kartik/accessmanager/domain/repository/: AppRepository.kt  PolicyRepository.kt
app/src/main/java/dev/kartik/accessmanager/domain/usecase/: GetInstalledAppsUseCase.kt  GetPoliciesUseCase.kt  SetPolicyUseCase.kt  TogglePolicyUseCase.kt
app/src/main/java/dev/kartik/accessmanager/presentation/home/: AppFilter.kt  HomeScreen.kt  HomeUiState.kt  HomeViewModel.kt
app/src/main/java/dev/kartik/accessmanager/presentation/navigation/: AccessManagerNavHost.kt  Screen.kt
app/src/main/java/dev/kartik/accessmanager/presentation/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/dev/kartik/accessmanager/vpn/connection/: ConnectionManager.kt  ConnectionSession.kt  ConnectionState.kt  FlowKey.kt
app/src/main/res/values/: themes.xml
config/detekt/: detekt.yml
docs/: 02_ARCHITECTURE.md  03_PACKET_PIPELINE.md  04_NATIVE_ARCHITECTURE.md  05_SESSION_MANAGEMENT.md  06_FIREWALL_ENGINE.md  07_SECURITY.md  08_PERFORMANCE.md  09_BUILD_GUIDE.md  10_TESTING_GUIDE.md  11_API_REFERENCE.md  12_CODEBASE_TOUR.md  13_DESIGN_DECISIONS.md  14_LIMITATIONS.md  15_RELEASE_NOTES.md  16_SECURITY_AUDIT.md  17_BUGFIX_REPORT_TUN_WRITE.md  18_CHECKSUM_FIX_PLAN.md  future_improvements.md
gradle/: libs.versions.toml
(+28 files in other folders)
